--- a/trepaarad.html
+++ b/trepaarad.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 
     <link rel="stylesheet" href="trepaarad.css">
@@ -17,19 +18,28 @@
     </header>
 
     <section>
-    <h1> Tre på rad! </h1>
-    </section>  
-    
-    <section>
-    <div id="brett" class="brett">
-    <div class="rute" data-cell-index="0"></div>
-    </div>
+        <h1> Tre på rad! </h1>
+    </section>
+
+    <section class="hoved">
+        <div id="brett" class="brett">
+            <div class="rute"></div>
+            <div class="rute"></div>
+            <div class="rute"></div>
+            <div class="rute"></div>
+            <div class="rute"></div>
+            <div class="rute"></div>
+            <div class="rute"></div>
+            <div class="rute"></div>
+            <div class="rute"></div>
+        </div>
     </section>
 
     <footer>
-        
+
     </footer>
 
 
 </body>
+
 </html>
