--- a/trepaarad.html
+++ b/trepaarad.html
@@ -19,19 +19,34 @@
 
     <section>
         <h1> Tre på rad! </h1>
-    </section>
 
-    <section class="hoved">
-        <div id="brett" class="brett">
-            <div class="rute"></div>
-            <div class="rute"></div>
-            <div class="rute"></div>
-            <div class="rute"></div>
-            <div class="rute"></div>
-            <div class="rute"></div>
-            <div class="rute"></div>
-            <div class="rute"></div>
-            <div class="rute"></div>
+        <div class="innhold">
+            <div class="boks venstre">
+                <p>Spiller 1 = X</p>
+                <p>Spiller 2 = O </p>
+            </div>
+
+            <div id="brett" class="brett">
+                <div class="rute blaa"></div>
+                <div class="rute"></div>
+                <div class="rute blaa"></div>
+                <div class="rute"></div>
+                <div class="rute blaa"></div>
+                <div class="rute"></div>
+                <div class="rute blaa"></div>
+                <div class="rute"></div>
+                <div class="rute blaa"></div>
+            </div>
+
+
+            <div class="boks hoyre">
+                <h2>Regler</h2>
+                <p> <div class="bold">Start:</div> Spillerne velger hver sin figur (X eller O).
+                    <div class="bold">Trekk: </div>Man setter ett symbol i en tom rute per tur.
+                    <div class="bold">Vinner:</div> Førstemann med tre symboler i en ubrutt linje (horisontalt, vertikalt eller diagonalt)
+                    vinner.
+                    <div class="bold">Uavgjort:</div> Hvis alle 9 rutene fylles uten at noen har tre på rad, ender spillet uavgjort. </p>
+            </div>
         </div>
     </section>
 
