--- a/wordle.html
+++ b/wordle.html
@@ -11,6 +11,11 @@
 </head>
 
 <body>
+
+    <header></header>
+
+    <h1>Wordle</h1>
+
     <div id="container"></div>
     <div id="keyboard">
         <div class="keyboard-rad">
@@ -23,7 +28,7 @@
             <button data-key="u">u</button>
             <button data-key="i">i</button>
             <button data-key="o">o</button>
-            <button data-key="p">p</button> 
+            <button data-key="p">p</button>
 
         </div>
         <div class="keyboard-rad">
@@ -47,9 +52,11 @@
             <button data-key="n">n</button>
             <button data-key="m">m</button>
             <button data-key="del" class="bred-tast">Del</button>
-    </div>
+        </div>
 
-    
+        <footer></footer>
+
+
 </body>
 
 </html>
