design og småpirk

--- a/wordle.html
+++ b/wordle.html
@@ -54,7 +54,9 @@
             <button data-key="del" class="bred-tast">Del</button>
         </div>
 
-        <footer></footer>
+        <footer>
+
+        </footer>
 
 
 </body>
