--- a/wordle.html
+++ b/wordle.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width='device-width', initial-scale=1.0">
     <link rel="stylesheet" href="wordle.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="general.css">
     <script src="wordle.js"></script>
     <title>Wordle</title>
 </head>
